fixed layout issues and selected seats on succes screen

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 85px;
+    padding-top: 100px;
 }
 
 .Home > p {
