--- a/src/Pages/Schedule/Schedule.css
+++ b/src/Pages/Schedule/Schedule.css
@@ -3,20 +3,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 85px;
+    padding-top: 100px;
 }
 
 .Schedule > p {
     font-size: 24px;
     color: #293845;
-    margin-bottom: 35px;
+    margin-bottom: 20px;
 }
 
 .Schedule .schedule-days {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding-bottom: 100px;
+    padding-bottom: 115px;
 }
 
 .Schedule .schedule-days .day {
